# pypi-robot

./: Cargo.toml  Dockerfile
src/: main.rs  pypi_search_result.html
