[package]
name = "pypirobot"
version = "0.1.0"
authors = ["Kilerd Chan <blove694@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram_typing_bot = {git="https://github.com/Kilerd/telegram_typing_bot"}
actix-web = "1.0.9"
actix-rt = "1.0.0"
