[package]
name = "pypirobot"
version = "0.1.0"
authors = ["Kilerd Chan <blove694@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram_typing_bot = {git="https://github.com/Kilerd/telegram_typing_bot"}
actix-rt = "1.0.0"
actix-web = "2.0.0-rc"
actix-files = "0.2.0"
actix-session = "0.3.0"
actix-utils = "1.0.3"

futures = "0.3.1"
env_logger = "0.5"
bytes = "0.5"